# triadic-microgpt

./: .gitignore  .zenodo.json  AUDIT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  EVOLUTION_PLAN.md  EXPERIMENT_REFERENCE.md  LICENSE  PRIMITIVE_RECONCILIATION.md  README.md  ROADMAP.md  SECURITY.md  TERMS.md  TEST_STATUS.md  ZENODO_METADATA.md  environment.yml  experiment_log.md  model_fast.npz  model_fast.vocab  requirements.txt  test_cuda.py  tokenizer.json  verify_training.py
.claude/: benchmarks-spec.md  guide.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
archive/: AUDIT.md  EVOLUTION_PLAN.md  PLAN.md  PRIMITIVE_RECONCILIATION.md  TEST_STATUS.md  danza_experiment_log.md  implementation_plan.md
benchmarks/: README.md
conceptual_tokenizer/: CONTEXT.md  __init__.py  config.py  los_tres_reinos.md  prime_encoder.py  primitives.py  seed_lexicon.py  states.py  triadic_bridge.py
data/: README.md  concepts.txt  core_concepts.txt  gold_primes.json  gold_primes_32.json  lambada_test_cache.json  wikitext2_test_cache.json
experiment10/: README.md
experiments/: quaternion_probe.py
paper/: triadic_microgpt.tex
playground/: PLAN.md  REPRODUCIBILITY.md  alignment_ablation.py  analyze_bootstrap.py  compare_all_runs.py  compression_benchmark.py  concept_gpt_49bit.py  concept_tokenizer.py  cross_dataset_eval.py  curriculum_sub_r3.py  d_a12_bootstrap_ci.py  danza_63bit.py  danza_bootstrap.py  danza_experiment_log.md  danza_posthoc_analysis.py  danza_ternary.py  dead_bit_regularization.py  embedding_gap_baseline.py  eval_d_a18.py  eval_d_a19.py  eval_generalization.py  eval_xl_sub_checkpoint.py  expanded_analogy_benchmark.py  gpt2_355m_sparsity.py  gpt2_medium_ternary.py  gradient_decoupling.py  hybrid_adversarial.py  ifsq_binary_ablation.py  info_hierarchy_analysis.py  k_constant_analysis.py  monitor_bootstrap.py  multi_quad_ensemble.py  multi_quad_predict.py  multi_seed_validation.py  negative_baselines.py  negative_subsumption_test.py  phase_attention.py  plot_sweep_results.py  r3_chain_test.py  r3_entropy_guard.py  (+17 more)
reports/: bias_audit_results.json  eval_report.json
reptimeline/: README.md  __init__.py  __main__.py  autolabel.py  (+5 more)
triadic-head/: .gitignore  LICENSE  README.md  pyproject.toml
triadic-head/examples/: train_gpt2.py
triadic-head/results/tinystories_infonce/: explore.json  training_log.json  training_log.txt  validation.json
triadic-head/tests/: test_algebra.py  test_wrapper.py
triadic-head/triadic_head/: __init__.py  algebra.py  wrapper.py
(+281 files in other folders)
